RESOLVED FIXED158300
border-radius with different width and height rendered wrong
https://bugs.webkit.org/show_bug.cgi?id=158300
Summary border-radius with different width and height rendered wrong
Ivo Gabe de Wolff
Reported 2016-06-02 03:30:17 PDT
Created attachment 280324 [details] Reproduction When specifying border-top-left-radius (or any other border-radius option), with different width and height, the arc is not fully shown. When you open the attached file you can see that a small piece of the border is missing between the left and top sections.
Attachments
Reproduction (493 bytes, text/html)
2016-06-02 03:30 PDT, Ivo Gabe de Wolff
no flags
Screenshot of WebKit (67.51 KB, image/png)
2016-06-02 03:31 PDT, Ivo Gabe de Wolff
no flags
Screenshot of Chrome (57.58 KB, image/png)
2016-06-02 03:32 PDT, Ivo Gabe de Wolff
no flags
Patch (34.57 KB, patch)
2016-06-08 18:01 PDT, Simon Fraser (smfr)
no flags
Ivo Gabe de Wolff
Comment 1 2016-06-02 03:31:31 PDT
Created attachment 280325 [details] Screenshot of WebKit
Ivo Gabe de Wolff
Comment 2 2016-06-02 03:32:23 PDT
Created attachment 280327 [details] Screenshot of Chrome
Radar WebKit Bug Importer
Comment 3 2016-06-07 07:42:26 PDT
Simon Fraser (smfr)
Comment 4 2016-06-07 11:59:54 PDT
clipBorderSidePolygon() is clipping incorrectly.
Simon Fraser (smfr)
Comment 5 2016-06-08 18:01:19 PDT
WebKit Commit Bot
Comment 6 2016-06-09 09:57:47 PDT
Comment on attachment 280864 [details] Patch Clearing flags on attachment: 280864 Committed r201868: <http://trac.webkit.org/changeset/201868>
WebKit Commit Bot
Comment 7 2016-06-09 09:57:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.